fixed some flexbox and layout issues

--- a/styles/layout/_header.scss
+++ b/styles/layout/_header.scss
@@ -6,6 +6,7 @@ header {
 	align-items: center;
 	@include card(2);
 	padding-left: 20px;
+	width: 100%;
 }
 
 .navmenu {
